--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### WordPress template
 # ignore everything in the root except the "wp-content" directory.
+plugins
+themes
 
 # ignore everything in the "wp-content" directory, except:
 # "mu-plugins", "plugins", "themes" directory
@@ -10,6 +12,8 @@
 
 # ignore these plugins
 plugins/hello.php
+
+
 
 uploads/
 
