--- a/.gitignore
+++ b/.gitignore
@@ -1648,8 +1648,8 @@ wp-includes/widgets/class-wp-widget-search.php
 wp-includes/widgets/class-wp-widget-tag-cloud.php
 wp-includes/widgets/class-wp-widget-text.php
 /index.php
-license.txt
-readme.html
+/license.txt
+/readme.html
 wp-activate.php
 wp-blog-header.php
 wp-comments-post.php
@@ -2256,3 +2256,25 @@ wp-content/uploads/2020/04/Grill-150x150.png
 wp-content/uploads/2020/04/Grill-300x116.png
 wp-content/uploads/2020/04/Grill.png
 wp-content/uploads/2020/04/widgets.wie
+wp-content/plugins/bakery2/bakery2.php
+wp-content/plugins/bakery2/index.php
+wp-content/plugins/bakery2/LICENSE.txt
+wp-content/plugins/bakery2/README.txt
+wp-content/plugins/bakery2/uninstall.php
+wp-content/plugins/bakery2/admin/class-bakery2-admin.php
+wp-content/plugins/bakery2/admin/index.php
+wp-content/plugins/bakery2/admin/css/bakery2-admin.css
+wp-content/plugins/bakery2/admin/js/bakery2-admin.js
+wp-content/plugins/bakery2/admin/partials/bakery2-admin-display.php
+wp-content/plugins/bakery2/includes/class-bakery2-activator.php
+wp-content/plugins/bakery2/includes/class-bakery2-deactivator.php
+wp-content/plugins/bakery2/includes/class-bakery2-i18n.php
+wp-content/plugins/bakery2/includes/class-bakery2-loader.php
+wp-content/plugins/bakery2/includes/class-bakery2.php
+wp-content/plugins/bakery2/includes/index.php
+wp-content/plugins/bakery2/languages/bakery2.pot
+wp-content/plugins/bakery2/public/class-bakery2-public.php
+wp-content/plugins/bakery2/public/index.php
+wp-content/plugins/bakery2/public/css/bakery2-public.css
+wp-content/plugins/bakery2/public/js/bakery2-public.js
+wp-content/plugins/bakery2/public/partials/bakery2-public-display.php
