--- a/.gitignore
+++ b/.gitignore
@@ -2278,3 +2278,237 @@ wp-content/plugins/bakery2/public/index.php
 wp-content/plugins/bakery2/public/css/bakery2-public.css
 wp-content/plugins/bakery2/public/js/bakery2-public.js
 wp-content/plugins/bakery2/public/partials/bakery2-public-display.php
+wp-content/plugins/advanced-custom-fields/acf.php
+wp-content/plugins/advanced-custom-fields/README.md
+wp-content/plugins/advanced-custom-fields/readme.txt
+wp-content/plugins/advanced-custom-fields/assets/css/acf-dark.css
+wp-content/plugins/advanced-custom-fields/assets/css/acf-field-group.css
+wp-content/plugins/advanced-custom-fields/assets/css/acf-global.css
+wp-content/plugins/advanced-custom-fields/assets/css/acf-input.css
+wp-content/plugins/advanced-custom-fields/assets/font/acf.eot
+wp-content/plugins/advanced-custom-fields/assets/font/acf.svg
+wp-content/plugins/advanced-custom-fields/assets/font/acf.ttf
+wp-content/plugins/advanced-custom-fields/assets/font/acf.woff
+wp-content/plugins/advanced-custom-fields/assets/font/acf.woff2
+wp-content/plugins/advanced-custom-fields/assets/font/config.json
+wp-content/plugins/advanced-custom-fields/assets/font/LICENSE.txt
+wp-content/plugins/advanced-custom-fields/assets/font/README.txt
+wp-content/plugins/advanced-custom-fields/assets/images/acf-logo.png
+wp-content/plugins/advanced-custom-fields/assets/images/spinner.gif
+wp-content/plugins/advanced-custom-fields/assets/images/spinner@2x.gif
+wp-content/plugins/advanced-custom-fields/assets/inc/datepicker/jquery-ui.css
+wp-content/plugins/advanced-custom-fields/assets/inc/datepicker/jquery-ui.min.css
+wp-content/plugins/advanced-custom-fields/assets/inc/datepicker/images/ui-bg_highlight-soft_0_ffffff_1x100.png
+wp-content/plugins/advanced-custom-fields/assets/inc/datepicker/images/ui-icons_444444_256x240.png
+wp-content/plugins/advanced-custom-fields/assets/inc/datepicker/images/ui-icons_DDDDDD_256x240.png
+wp-content/plugins/advanced-custom-fields/assets/inc/datepicker/images/ui-icons_ffffff_256x240.png
+wp-content/plugins/advanced-custom-fields/assets/inc/select2/3/select2-spinner.gif
+wp-content/plugins/advanced-custom-fields/assets/inc/select2/3/select2.css
+wp-content/plugins/advanced-custom-fields/assets/inc/select2/3/select2.js
+wp-content/plugins/advanced-custom-fields/assets/inc/select2/3/select2.min.js
+wp-content/plugins/advanced-custom-fields/assets/inc/select2/3/select2.png
+wp-content/plugins/advanced-custom-fields/assets/inc/select2/3/select2x2.png
+wp-content/plugins/advanced-custom-fields/assets/inc/select2/4/select2.css
+wp-content/plugins/advanced-custom-fields/assets/inc/select2/4/select2.full.js
+wp-content/plugins/advanced-custom-fields/assets/inc/select2/4/select2.full.min.js
+wp-content/plugins/advanced-custom-fields/assets/inc/select2/4/select2.js
+wp-content/plugins/advanced-custom-fields/assets/inc/select2/4/select2.min.css
+wp-content/plugins/advanced-custom-fields/assets/inc/select2/4/select2.min.js
+wp-content/plugins/advanced-custom-fields/assets/inc/timepicker/jquery-ui-timepicker-addon.css
+wp-content/plugins/advanced-custom-fields/assets/inc/timepicker/jquery-ui-timepicker-addon.js
+wp-content/plugins/advanced-custom-fields/assets/inc/timepicker/jquery-ui-timepicker-addon.min.css
+wp-content/plugins/advanced-custom-fields/assets/inc/timepicker/jquery-ui-timepicker-addon.min.js
+wp-content/plugins/advanced-custom-fields/assets/js/acf-field-group.js
+wp-content/plugins/advanced-custom-fields/assets/js/acf-field-group.min.js
+wp-content/plugins/advanced-custom-fields/assets/js/acf-input.js
+wp-content/plugins/advanced-custom-fields/assets/js/acf-input.min.js
+wp-content/plugins/advanced-custom-fields/includes/acf-field-functions.php
+wp-content/plugins/advanced-custom-fields/includes/acf-field-group-functions.php
+wp-content/plugins/advanced-custom-fields/includes/acf-form-functions.php
+wp-content/plugins/advanced-custom-fields/includes/acf-helper-functions.php
+wp-content/plugins/advanced-custom-fields/includes/acf-hook-functions.php
+wp-content/plugins/advanced-custom-fields/includes/acf-input-functions.php
+wp-content/plugins/advanced-custom-fields/includes/acf-meta-functions.php
+wp-content/plugins/advanced-custom-fields/includes/acf-post-functions.php
+wp-content/plugins/advanced-custom-fields/includes/acf-user-functions.php
+wp-content/plugins/advanced-custom-fields/includes/acf-utility-functions.php
+wp-content/plugins/advanced-custom-fields/includes/acf-value-functions.php
+wp-content/plugins/advanced-custom-fields/includes/assets.php
+wp-content/plugins/advanced-custom-fields/includes/class-acf-data.php
+wp-content/plugins/advanced-custom-fields/includes/compatibility.php
+wp-content/plugins/advanced-custom-fields/includes/deprecated.php
+wp-content/plugins/advanced-custom-fields/includes/fields.php
+wp-content/plugins/advanced-custom-fields/includes/json.php
+wp-content/plugins/advanced-custom-fields/includes/l10n.php
+wp-content/plugins/advanced-custom-fields/includes/local-fields.php
+wp-content/plugins/advanced-custom-fields/includes/local-meta.php
+wp-content/plugins/advanced-custom-fields/includes/locations.php
+wp-content/plugins/advanced-custom-fields/includes/loop.php
+wp-content/plugins/advanced-custom-fields/includes/media.php
+wp-content/plugins/advanced-custom-fields/includes/revisions.php
+wp-content/plugins/advanced-custom-fields/includes/third-party.php
+wp-content/plugins/advanced-custom-fields/includes/updates.php
+wp-content/plugins/advanced-custom-fields/includes/upgrades.php
+wp-content/plugins/advanced-custom-fields/includes/validation.php
+wp-content/plugins/advanced-custom-fields/includes/wpml.php
+wp-content/plugins/advanced-custom-fields/includes/admin/admin-field-group.php
+wp-content/plugins/advanced-custom-fields/includes/admin/admin-field-groups.php
+wp-content/plugins/advanced-custom-fields/includes/admin/admin-notices.php
+wp-content/plugins/advanced-custom-fields/includes/admin/admin-tools.php
+wp-content/plugins/advanced-custom-fields/includes/admin/admin-upgrade.php
+wp-content/plugins/advanced-custom-fields/includes/admin/admin.php
+wp-content/plugins/advanced-custom-fields/includes/admin/tools/class-acf-admin-tool-export.php
+wp-content/plugins/advanced-custom-fields/includes/admin/tools/class-acf-admin-tool-import.php
+wp-content/plugins/advanced-custom-fields/includes/admin/tools/class-acf-admin-tool.php
+wp-content/plugins/advanced-custom-fields/includes/admin/views/field-group-field-conditional-logic.php
+wp-content/plugins/advanced-custom-fields/includes/admin/views/field-group-field.php
+wp-content/plugins/advanced-custom-fields/includes/admin/views/field-group-fields.php
+wp-content/plugins/advanced-custom-fields/includes/admin/views/field-group-locations.php
+wp-content/plugins/advanced-custom-fields/includes/admin/views/field-group-options.php
+wp-content/plugins/advanced-custom-fields/includes/admin/views/html-admin-page-upgrade-network.php
+wp-content/plugins/advanced-custom-fields/includes/admin/views/html-admin-page-upgrade.php
+wp-content/plugins/advanced-custom-fields/includes/admin/views/html-admin-tools.php
+wp-content/plugins/advanced-custom-fields/includes/admin/views/html-location-group.php
+wp-content/plugins/advanced-custom-fields/includes/admin/views/html-location-rule.php
+wp-content/plugins/advanced-custom-fields/includes/admin/views/html-notice-upgrade.php
+wp-content/plugins/advanced-custom-fields/includes/admin/views/settings-info.php
+wp-content/plugins/advanced-custom-fields/includes/ajax/class-acf-ajax-check-screen.php
+wp-content/plugins/advanced-custom-fields/includes/ajax/class-acf-ajax-query-users.php
+wp-content/plugins/advanced-custom-fields/includes/ajax/class-acf-ajax-query.php
+wp-content/plugins/advanced-custom-fields/includes/ajax/class-acf-ajax-upgrade.php
+wp-content/plugins/advanced-custom-fields/includes/ajax/class-acf-ajax-user-setting.php
+wp-content/plugins/advanced-custom-fields/includes/ajax/class-acf-ajax.php
+wp-content/plugins/advanced-custom-fields/includes/api/api-helpers.php
+wp-content/plugins/advanced-custom-fields/includes/api/api-template.php
+wp-content/plugins/advanced-custom-fields/includes/api/api-term.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-accordion.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-button-group.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-checkbox.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-color_picker.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-date_picker.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-date_time_picker.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-email.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-file.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-google-map.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-group.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-image.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-link.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-message.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-number.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-oembed.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-output.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-page_link.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-password.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-post_object.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-radio.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-range.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-relationship.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-select.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-separator.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-tab.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-taxonomy.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-text.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-textarea.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-time_picker.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-true_false.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-url.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-user.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field-wysiwyg.php
+wp-content/plugins/advanced-custom-fields/includes/fields/class-acf-field.php
+wp-content/plugins/advanced-custom-fields/includes/forms/form-attachment.php
+wp-content/plugins/advanced-custom-fields/includes/forms/form-comment.php
+wp-content/plugins/advanced-custom-fields/includes/forms/form-customizer.php
+wp-content/plugins/advanced-custom-fields/includes/forms/form-front.php
+wp-content/plugins/advanced-custom-fields/includes/forms/form-gutenberg.php
+wp-content/plugins/advanced-custom-fields/includes/forms/form-nav-menu.php
+wp-content/plugins/advanced-custom-fields/includes/forms/form-post.php
+wp-content/plugins/advanced-custom-fields/includes/forms/form-taxonomy.php
+wp-content/plugins/advanced-custom-fields/includes/forms/form-user.php
+wp-content/plugins/advanced-custom-fields/includes/forms/form-widget.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-attachment.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-comment.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-current-user-role.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-current-user.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-nav-menu-item.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-nav-menu.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-page-parent.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-page-template.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-page-type.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-page.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-post-category.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-post-format.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-post-status.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-post-taxonomy.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-post-template.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-post-type.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-post.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-taxonomy.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-user-form.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-user-role.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location-widget.php
+wp-content/plugins/advanced-custom-fields/includes/locations/class-acf-location.php
+wp-content/plugins/advanced-custom-fields/includes/walkers/class-acf-walker-nav-menu-edit.php
+wp-content/plugins/advanced-custom-fields/includes/walkers/class-acf-walker-taxonomy-field.php
+wp-content/plugins/advanced-custom-fields/lang/acf-ar.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-ar.po
+wp-content/plugins/advanced-custom-fields/lang/acf-bg_BG.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-bg_BG.po
+wp-content/plugins/advanced-custom-fields/lang/acf-ca.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-ca.po
+wp-content/plugins/advanced-custom-fields/lang/acf-cs_CZ.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-cs_CZ.po
+wp-content/plugins/advanced-custom-fields/lang/acf-de_CH.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-de_CH.po
+wp-content/plugins/advanced-custom-fields/lang/acf-de_DE_formal.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-de_DE_formal.po
+wp-content/plugins/advanced-custom-fields/lang/acf-de_DE.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-de_DE.po
+wp-content/plugins/advanced-custom-fields/lang/acf-es_ES.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-es_ES.po
+wp-content/plugins/advanced-custom-fields/lang/acf-fa_IR.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-fa_IR.po
+wp-content/plugins/advanced-custom-fields/lang/acf-fi.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-fi.po
+wp-content/plugins/advanced-custom-fields/lang/acf-fr_CA.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-fr_CA.po
+wp-content/plugins/advanced-custom-fields/lang/acf-fr_FR.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-fr_FR.po
+wp-content/plugins/advanced-custom-fields/lang/acf-he_IL.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-he_IL.po
+wp-content/plugins/advanced-custom-fields/lang/acf-hr_HR.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-hr_HR.po
+wp-content/plugins/advanced-custom-fields/lang/acf-hu_HU.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-hu_HU.po
+wp-content/plugins/advanced-custom-fields/lang/acf-id_ID.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-id_ID.po
+wp-content/plugins/advanced-custom-fields/lang/acf-it_IT.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-it_IT.po
+wp-content/plugins/advanced-custom-fields/lang/acf-ja.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-ja.po
+wp-content/plugins/advanced-custom-fields/lang/acf-nb_NO.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-nb_NO.po
+wp-content/plugins/advanced-custom-fields/lang/acf-nl_NL.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-nl_NL.po
+wp-content/plugins/advanced-custom-fields/lang/acf-pl_PL.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-pl_PL.po
+wp-content/plugins/advanced-custom-fields/lang/acf-pt_BR.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-pt_BR.po
+wp-content/plugins/advanced-custom-fields/lang/acf-pt_PT.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-pt_PT.po
+wp-content/plugins/advanced-custom-fields/lang/acf-ro_RO.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-ro_RO.po
+wp-content/plugins/advanced-custom-fields/lang/acf-ru_RU.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-ru_RU.po
+wp-content/plugins/advanced-custom-fields/lang/acf-sk_SK.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-sk_SK.po
+wp-content/plugins/advanced-custom-fields/lang/acf-sv_SE.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-sv_SE.po
+wp-content/plugins/advanced-custom-fields/lang/acf-tr_TR.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-tr_TR.po
+wp-content/plugins/advanced-custom-fields/lang/acf-uk.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-uk.po
+wp-content/plugins/advanced-custom-fields/lang/acf-zh_CN.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-zh_CN.po
+wp-content/plugins/advanced-custom-fields/lang/acf-zh_TW.mo
+wp-content/plugins/advanced-custom-fields/lang/acf-zh_TW.po
+wp-content/plugins/advanced-custom-fields/lang/acf.pot
